[package]
name = "rust_learning_projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["another_function", "branches", "chapter_3_temp_conversions", "guessing_game", "hello_cargo", "loops"]
