[package]
name = "rust_learning_projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["enums_and_pattern_matching","rectangles", "another_function", "branches", "chapter_3_fibonacci", "chapter_3_temp_conversions", "chapter_3_fibonacci", "chapter_3_twelve_days_of_christmas_lyrics", "guessing_game", "hello_cargo", "loops", "rectangles"]
